fix: align slots in message composer previews

--- a/src/components/MessageInput/styling/MessageComposer.scss
+++ b/src/components/MessageInput/styling/MessageComposer.scss
@@ -63,8 +63,6 @@
     flex-direction: column;
     width: 100%;
     min-width: 0;
-    padding-inline: var(--spacing-xs);
-    padding-block: var(--spacing-sm);
     @include utils.component-layer-overrides('message-input');
   }
 
@@ -72,7 +70,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding-bottom: var(--spacing-xs);
+    padding: var(--spacing-xs) var(--spacing-xs) 0;
     gap: var(--spacing-xxs);
 
     min-width: 0;
@@ -83,6 +81,7 @@
     align-items: end;
     width: 100%;
     gap: var(--spacing-xs);
+    padding: var(--spacing-sm);
 
     $controls-containers-min-height: 26px;
 
